# GlobalSwitching

./: CMakeLists.txt  GlobalSwitching.cpp  second.cpp
cpps/: CurrentMemoryManagerStrategy.cpp  MemoryManagerSwitcher.cpp  RuntimeHeapStrategy.cpp  StackMemoryManager.cpp  StdMemoryManager.cpp  stdOperators.cpp
headers/: AllocOn.h  CurrentMemoryManagerStrategy.h  GlobalSwitcher.h  IAllocStrategy.h  IMemoryManager.h  MemoryManagerSwitcher.h  RuntimeHeapStrategy.h  StackMemoryManager.h  StdMemoryManager.h  stdOperators.h
